force-app/main/default/objects/Field_Mapping__c/Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Define the field mapping from source to target object. The values will be copied over from the order line item to the target object (e.g. Asset) when the order will reach its final status.</description>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>FM-{0000}</displayFormat>
        <label>Field Mapping No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>