force-app/main/default/objects/Field_Mapping__c/fields/Order_Mapper__c.field-meta.xml
<CustomField>
    <fullName>Order_Mapper__c</fullName>
    <label>Order Mapper</label>
    <referenceTo>Order_Mapper__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>