force-app/main/default/objects/Field_Mapping__c/fields/Source_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Field__c</fullName>
    <label>Source Object Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>